# audio-score-follower-onset

./: .gitignore  CLAUDE.md  README.md  REFACTORING_PLAN.md  pyproject.toml
audio_score_follower/: __init__.py  launch_options.py  main.py
audio_score_follower/cli/: build_reference.py  follow.py
audio_score_follower/config/: loader.py
audio_score_follower/core/: audio_level.py  cooldown_timer.py  feature_extractor.py  follower_worker.py  mic_effects_probe.py  movement_loader.py  oltw_follower.py  posterior_follower.py  reference_builder.py  result_handler.py  score_mapper.py  slide_controller.py  state_manager.py  synth_locator.py  trigger_engine.py  viz_feed.py  warp_lookup.py
audio_score_follower/ui/: build_window.py  common.py  gui_tkinter.py  launcher.py  viz_window.py
config/: fantastique4.json  fantastique5.json
tasks/: eval_tracking.py  generate_score_wav.py
tests/: test_audio_level.py  test_build_window.py  test_config_loader.py  test_config_loader_defaults.py  test_display_confidence.py  test_end_performance.py  test_feature_extractor.py  test_launch_options.py  test_mic_effects_probe.py  test_mismatch_detector.py  test_oltw_follower.py  test_posterior_follower.py  test_silence_gate.py  test_smoke_reference_builder.py  test_state_manager.py  test_viz_feed.py  test_warp_lookup.py
