[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-score-follower"
version = "0.1.0"
description = "Audio-to-audio orchestral score following via offline warp + online DTW"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tosh-tora" }]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "partitura>=0.3.10",
    "sounddevice>=0.4.6",
    "playwright>=1.40",
    "music21>=8.0",
    # NOTE: synctoolbox is NOT listed here because synctoolbox 1.4.1 pins
    # numpy<2 / pandas<2 / music21<6 which conflict with our modern stack.
    # Install separately: pip install --no-deps synctoolbox libfmp ipython
    # See README.md for details. The numpy-2 incompat is monkey-patched in
    # audio_score_follower.core.reference_builder.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "matplotlib>=3.7",
]

[project.scripts]
asf-build = "audio_score_follower.cli.build_reference:main"
asf-follow = "audio_score_follower.cli.follow:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_score_follower*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
